test/Fail/Issue4401.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _4 (f = f) (x = x) = f x : Set (blocked on _4)

Issue4401.agda:8.12-11.18: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue4401.agda:8.12-13
  Issue4401.agda:11.14-18
